Bug 322274 - Constants inside namespaces are not properly highlighted sometimes.
Summary: Constants inside namespaces are not properly highlighted sometimes.
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: PHP (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 4.3.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-12 11:48 UTC by Miquel Sabaté
Modified: 2013-07-15 15:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miquel Sabaté 2013-07-12 11:48:13 UTC
Imagine the following valid PHP code:

<?php

namespace Foo;
const SOMETHING = 0;
$a = SOMETHING;

KDevelop doesn't highlight the use of "SOMETHING" when it should.

Reproducible: Always
Comment 1 Miquel Sabaté 2013-07-15 15:46:59 UTC
Git commit 6d2e87e9dcce324acfde059afe87403697c4decf by Miquel Sabaté.
Committed on 15/07/2013 at 16:43.
Pushed by mssola into branch 'master'.

Mark the uses of constants inside namespaces.

REVIEW: 111517

M  +5    -0    duchain/helper.cpp
M  +22   -20   duchain/tests/uses.cpp

http://commits.kde.org/kdev-php/6d2e87e9dcce324acfde059afe87403697c4decf