Mark the uses of constants inside namespaces.

REVIEW: 111517
BUG: 322274